refactor: Restructure application routes and components for improved organization and clarity; migrate CloudEdgeConfigurationsPage and EmailAdminSubscriptionsPage to new directory structure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.6.2",
     "uuid": "https://esm.sh/uuid@^11.1.0",
-    "@/views": "/views.tsx"
+    "@/components/ui": "/components/ui/index.ts",
+    "@/pages": "/pages/index.ts",
+    "@/context": "/context.tsx",
+    "@/data": "/data.ts",
+    "@/types": "/types.ts"
   }
 }
 </script>
