refactor: Update application structure by removing obsolete pages, adding SMTP logs functionality, and enhancing routing; integrate Chatbot component into AppLayout

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     "@/pages": "/pages/index.ts",
     "@/context": "/context.tsx",
     "@/data": "/data.ts",
-    "@/types": "/types.ts"
+    "@/types": "/types.ts",
+    "@google/genai": "https://esm.sh/@google/genai@^1.11.0"
   }
 }
 </script>
