--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       background-color: #1a202c; /* Dark mode base background */
     }
     
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fadeIn 0.5s ease-out forwards;
+    }
   </style>
 <script type="importmap">
 {
